# pixelart-realtime-tauri

./: .gitignore  PLAN.md  README.md  bun.lockb  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: cv.rs  mod.rs  mosaic.rs  string2vec.rs
src/components/: ConvertedCam.tsx  Settings.tsx  Webcam.tsx
src/utils/: states.ts
